networking/ingress-controller/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app
  template:
    metadata:
      labels:
        name: app
    spec:
      containers:
      - name: container1
        image: ghcr.io/learnk8s/app:1.0.0
        ports:
        - name: web
          containerPort: 8080
