networking/ingress-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    name: app
  ports:
  - port: 80
    targetPort: 80
